name:                haskell-tor
version:             0.1.2
synopsis:            A Haskell Tor Node
description:         An implementation of the Tor anonymity system in Haskell.
                     The core functionality is exported both as an application
                     and as a high-level library exported by the 'Tor' module.
                     Please see that module for common usage scenarios, and
                     dip only into the other files for advanced / unplanned
                     cases.
homepage:            http://github.com/GaloisInc/haskell-tor
license:             BSD3
license-file:        LICENSE
author:              Adam Wick
maintainer:          awick@galois.com
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2, GHC == 7.8.4, GHC == 8.0.1

source-repository head
  type:              git
  location:          http://github.com/GaloisInc/haskell-tor

Flag network
  Description:        Use the base network library

Flag hans
  Description:        Use the Haskell Network Stack (HaNS)

library
  default-language:   Haskell2010
  default-extensions: CPP
  other-extensions:   DeriveDataTypeable, ExistentialQuantification,
                      FlexibleInstances, MultiWayIf, OverloadedStrings,
                      RecordWildCards
  ghc-options:        -Wall
  hs-source-dirs:     src

  build-depends:
                      array,
                      asn1-encoding,
                      asn1-types,
                      async,
                      attoparsec,
                      base,
                      base64-bytestring,
                      binary,
                      bytestring,
                      cereal,
                      containers,
                      cryptonite,
                      fingertree,
                      hourglass,
                      memory,
                      monadLib,
                      pretty-hex,
                      pure-zlib,
                      time,
                      tls,
                      x509,
                      x509-store

  other-modules:
                      Crypto.Hash.Easy,
                      Crypto.PubKey.RSA.KeyHash,
                      Paths_haskell_tor

  exposed-modules:
                      Tor,
                      Tor.Circuit,
                      Tor.DataFormat.Consensus,
                      Tor.DataFormat.DefaultDirectory,
                      Tor.DataFormat.DirCertInfo,
                      Tor.DataFormat.Helpers,
                      Tor.DataFormat.RelayCell,
                      Tor.DataFormat.RouterDesc,
                      Tor.DataFormat.TorAddress,
                      Tor.DataFormat.TorCell,
                      Tor.HybridCrypto,
                      Tor.Link,
                      Tor.Link.DH,
                      Tor.Link.CipherSuites,
                      Tor.NetworkStack.Fetch,
                      Tor.NetworkStack,
                      Tor.Options,
                      Tor.RNG,
                      Tor.RouterDesc.Render,
                      Tor.RouterDesc,
                      Tor.State.CircuitManager,
                      Tor.State.Credentials,
                      Tor.State.Directories,
                      Tor.State.LinkManager,
                      Tor.State.Routers

  if flag(network) && !os(HaLVM)
    build-depends:    network
    exposed-modules:  Tor.NetworkStack.System
  if flag(hans)
    build-depends:    hans
    exposed-modules:  Tor.NetworkStack.Hans

executable haskell-tor
  main-is:            Main.hs
  other-modules:      Tor.Flags
  default-language:   Haskell2010
  ghc-options:        -Wall
  hs-source-dirs:     exe
  build-depends:
                      asn1-encoding,
                      asn1-types,
                      base,
                      base64-bytestring,
                      bytestring,
                      cryptonite,
                      haskell-tor,
                      hourglass,
                      memory,
                      time,
                      tls,
                      x509
  if flag(hans)
    build-depends:    hans
  if flag(network) && !os(HaLVM)
    build-depends:    network
  if os(HaLVM)
    build-depends:    HALVMCore,
                      XenDevice
  if (!flag(hans) && !flag(network)) || (!flag(hans) && os(HaLVM))
    buildable:        False

test-suite test-tor
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  ghc-options:        -Wall
  hs-source-dirs:     test
  default-language:   Haskell2010
  other-extensions:   CPP, FlexibleInstances, TypeSynonymInstances
  other-modules:
                      Test.CipherSuite,
                      Test.Handshakes,
                      Test.HybridEncrypt,
                      Test.Standard,
                      Test.TorCell
  ghc-options:        -fno-warn-orphans
  build-depends:
                      asn1-types,
                      base,
                      binary,
                      bytestring,
                      cryptonite,
                      haskell-tor,
                      hourglass,
                      HUnit,
                      QuickCheck,
                      memory,
                      pretty-hex,
                      test-framework,
                      test-framework-hunit,
                      test-framework-quickcheck2,
                      time,
                      x509
